# gpw-haskell

./: README.md  hie.yaml.off  lesson03.hs  lesson04.hs  lesson05.hs  lesson06.hs  lesson07.hs  lesson08.hs  lesson09.hs  lesson10.hs  lesson11.hs  lesson13.hs  lesson14.hs  lesson16.hs  lesson17.hs  lesson18.hs  lesson19.hs
lesson14/: q2.hs
lesson15/: cipher.hs  rot13.hs  xor.hs
lesson17/: probabilities.hs  probabilities_q17_2.hs
lesson20/: time_series.hs
lesson21/: 01_hello_io.hs  02_roll.hs  03_pizza.hs  04_maybe_pizza.hs  05_hello_maybe.hs  06_fib_io.hs
lesson22/: 01_get_args.hs  02_get_lines.hs  03_get_lines2.hs  04_lazy_io.hs  05_lazy_reverse.hs  06_lazy_nums.hs  07_lazy_sum_of_squares.hs  08_simple_calc.hs  09_lazy_print_quotes.hs
lesson23/: 01_text.hs  02_bg_highlight.hs  03_hello_world_text.hs  04_lazy_sums_text.hs
lesson24/: .gitignore  01_hello_file.hs  02_check_line.hs  03_file_counts.hs  04_file_counts2.hs  05_file_counts3.hs  06_cp.hs  07_capitalize.hs
lesson25/: .gitignore  01_glitcher.hs  01_main.hs  02_rand_char.hs  03_wc_like.hs
lesson26/: .gitignore  marc_to_html.hs
lesson27/: q27_1.hs  q27_2.hs  q27_3.hs  robot.hs
lesson28/: dist.hs  ex.hs  min3.hs
lesson29/: exercises.hs  main.hs
lesson30/: main.hs
lesson31/: candidates.hs  exercises.hs  main.hs
lesson32/: exercises.hs  main.hs
lesson33/: 01_hinq.hs  02_hinq.hs
lesson34/: 01_why_modules.hs  02_better_head.hs
lesson36/palindrome/: CHANGELOG.md  palindrome.cabal
lesson36/palindrome/app/: Main.hs
lesson36/palindrome/src/: MyLib.hs
lesson36/palindrome/test/: Main.hs
(+7 files in other folders)
