cabal-version:      3.0
name:               palindrome
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Benjamin Thomas
maintainer:         benjamin.guy.thomas@gmail.com
-- copyright:
category:           NONE
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , text
    hs-source-dirs:   src
    default-language: GHC2021

executable palindrome
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1
      , text
      , palindrome

    hs-source-dirs:   app
    default-language: GHC2021

test-suite palindrome-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1
      , text
      , QuickCheck
      , quickcheck-instances
      , palindrome
